welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:12: error: ';' expected but ')' found.
	return ((a + b - Math.abs(b - a))/2));
                                            ^