welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if ( Maths.abs(a - 10) == Math.abs(b-10)){
		return 0;
	}else{
		reutrn (a,b);
	}
}



def inf (a:Int , b:Int):Int ={
	return ((a + b - Math.abs(b - a))/2));
}
